mystyle.css
html, body { height: 100%; padding: 0; margin: 0; min-height: 100% }

/* main layout */

#main {background: #DDD; min-height: 100%; height: 100%;}
#leftDiv {background: #AAA; height: 100%; width: 65%; float: left;}
#leftFirst {background: #BBB; height: 65%; width: 100%; float: left; box-sizing: border-box; }
#bars {height:5%; width: 100%; float: left; border: 1px solid black;}
#progressBar {height: 50%; width: 100%; float: left;border: 1px solid black; display: none;}
#questionBar {height: 50%; width: 100%; float: left;border: 1px solid black; display: none;}
#leftSecond {background: #CCC; height: 30%; width: 100%; float: left; border: 1px solid black; overflow:scroll;}
#rightDiv {background: #EEE;  height: 100%; width: 35%;  float: right;}
#rightFirst {background: #FFF; height: 30%; box-sizing: border-box; border: 3px solid black;}
#rightSecond {background: #ABC; height: 70%; box-sizing: border-box; border: 3px solid black;}
#questionBoxArea {height: 85%; width: 99%; }
#questionBox {height: 90%; width: 99%; text-align:left; box-sizing: border-box; padding:5px;  margin: 5px; font-size: 15px; }
#submitBtn {margin: 8px;}

.questionElement {background: #AB0; margin: 5px 5px 5px 5px; padding: 5px 5px 5px 5px; height: 100px; box-sizing: border-box; border: 3px solid black; white-space: pre-wrap; overflow: scroll;}

